--- a/cookbook/x402/accepting-payments.mdx
+++ b/cookbook/x402/accepting-payments.mdx
@@ -5,7 +5,7 @@ description: "Protect HTTP endpoints with x402 payments using middleware"
 
 ## Accept Payments
 
-Protect your HTTP endpoints with x402 payments using middleware. The middleware enforces Coinbase's x402 handshake, forwards payment requirements to a facilitator, inspects `X-PAYMENT` headers from clients, and retries settlement before allowing requests to proceed.
+Protect your HTTP endpoints with x402 payments using middleware. The middleware enforces the x402 handshake, forwards payment requirements to a facilitator, inspects payment headers from clients, and handles settlement before allowing requests to proceed.
 
 ## Prerequisites
 
@@ -18,278 +18,300 @@ Protect your HTTP endpoints with x402 payments using middleware. The middleware 
 
 When a client reaches a paywalled endpoint, the middleware:
 
-1. Calls the facilitator's `/accepts` endpoint to produce canonical requirements
-2. Returns a `402 Payment Required` response if the incoming request lacks a valid `X-PAYMENT` header
-3. When a header is present, forwards it to `/settle`. If settlement succeeds, the request continues; otherwise another 402 is returned
+1. Returns a `402 Payment Required` response with payment requirements if the incoming request lacks a valid payment header
+2. When a payment header is present, forwards it to the facilitator's `/verify` and `/settle` endpoints
+3. If settlement succeeds, the request continues; otherwise another 402 is returned
+
+---
+
+## Environment Setup
+
+Create a `.env` file with the following variables:
+
+```bash
+# Facilitator URL
+FACILITATOR_URL=https://facilitator.dirtroad.dev
+
+# Your wallet address to receive payments
+FACILITATOR_RECEIVING_ADDRESS=0xfacilitator_receiving_address
+
+# USDC token contract on SKALE
+PAYMENT_TOKEN_ADDRESS=0x2e08028E3C4c2356572E096d8EF835cD5C6030bD
+PAYMENT_TOKEN_NAME="Bridged USDC (SKALE Bridge)"
+
+# SKALE Chain ID
+NETWORK_CHAIN_ID=324705682
+
+# Server port
+PORT=3000
+```
 
 ---
 
 ## Implementation
 
 <Tabs>
-    <Tab title="Express">
+    <Tab title="Coinbase SDK">
 
         ### Step 1: Install Dependencies
 
         ```bash
-        npm install express @faremeter/middleware
+        npm install hono @hono/node-server @x402/hono @x402/evm @x402/core dotenv
         ```
 
-        ### Step 2: Create the Middleware
+        ### Step 2: Create the Server
 
-        ```javascript
-        import { createMiddleware } from "@faremeter/middleware/express";
+        ```typescript
+        import { Hono } from "hono";
+        import { serve } from "@hono/node-server";
+        import { paymentMiddleware, x402ResourceServer } from "@x402/hono";
+        import { ExactEvmScheme } from "@x402/evm/exact/server";
+        import { HTTPFacilitatorClient } from "@x402/core/server";
+        import type { Network } from "@x402/core/types";
+        import "dotenv/config";
 
-        const paywalled = await createMiddleware({
-            facilitatorURL: "https://facilitator.dirtroad.dev",
-            accepts: [
-                {
-                    scheme: "exact",
-                    network: "skale-base-sepolia",
-                    maxAmountRequired: "1.5",
-                    description: "SKALE USDC payment",
-                },
-            ],
-        });
-        ```
-
-        ### Step 3: Create Protected Routes
-
-        ```javascript
-        import express from "express";
-
-        const app = express();
-        app.use(express.json());
-
-        // Public route - no payment required
-        app.get("/", (req, res) => {
-            res.json({ message: "Welcome to the API" });
-        });
-
-        // Protected route - requires x402 payment
-        app.get("/premium/data", paywalled, (req, res) => {
-            res.json({ 
-                secret: "This is premium content",
-                timestamp: new Date().toISOString()
-            });
-        });
-
-        // Protected route - premium weather data
-        app.get("/premium/weather", paywalled, (req, res) => {
-            res.json({
-                temperature: 72,
-                humidity: 45,
-                forecast: "Sunny with clear skies"
-            });
-        });
-
-        app.listen(3000, () => {
-            console.log("Server running on port 3000");
-        });
-        ```
-
-        ### Step 4: Complete Working Example
-
-        ```javascript
-        import express from "express";
-        import { createMiddleware } from "@faremeter/middleware/express";
+        const app = new Hono();
 
         async function main() {
-            const app = express();
-            app.use(express.json());
+            const facilitatorUrl = process.env.FACILITATOR_URL!;
+            const receivingAddress = process.env.RECEIVING_ADDRESS as `0x${string}`;
+            const paymentTokenAddress = process.env.PAYMENT_TOKEN_ADDRESS as `0x${string}`;
+            const paymentTokenName = process.env.PAYMENT_TOKEN_NAME || "Bridged USDC (SKALE Bridge)";
+            const networkChainId = process.env.NETWORK_CHAIN_ID || "324705682";
+            const network: Network = `eip155:${networkChainId}`;
 
-            // Create paywalled middleware
-            const paywalled = await createMiddleware({
-                facilitatorURL: "https://facilitator.dirtroad.dev",
-                accepts: [
-                    {
-                        scheme: "exact",
-                        network: "skale-base-sepolia",
-                        maxAmountRequired: "1.5",
-                        description: "SKALE USDC payment",
-                    },
-                ],
-                cacheConfig: {
-                    capacity: 256,
-                    maxAge: 30000, // Cache for 30 seconds
-                },
-            });
+            // Setup facilitator client and resource server
+            const facilitatorClient = new HTTPFacilitatorClient({ url: facilitatorUrl });
+            const resourceServer = new x402ResourceServer(facilitatorClient);
+            
+            // Register the exact scheme for EVM networks
+            resourceServer.register("eip155:*", new ExactEvmScheme());
 
             // Public endpoint
-            app.get("/", (req, res) => {
-                res.json({ 
-                    message: "Welcome! Access /premium/* endpoints for paid content" 
-                });
+            app.get("/", (c) => {
+                return c.json({ message: "Welcome! Access /premium/* endpoints for paid content" });
             });
 
-            // Protected endpoints
-            app.get("/premium/data", paywalled, (req, res) => {
-                res.json({ 
+            // Apply payment middleware to protected routes
+            app.use(
+                paymentMiddleware(
+                    {
+                        "GET /premium/data": {
+                            accepts: [
+                                {
+                                    scheme: "exact",
+                                    network: network,
+                                    payTo: receivingAddress,
+                                    price: {
+                                        amount: "10000",
+                                        asset: paymentTokenAddress,
+                                        extra: {
+                                            name: paymentTokenName,
+                                            version: "1",
+                                        },
+                                    },
+                                },
+                            ],
+                            description: "Premium data access",
+                            mimeType: "application/json",
+                        },
+                    },
+                    resourceServer,
+                ),
+            );
+
+            // Protected endpoint
+            app.get("/premium/data", (c) => {
+                return c.json({
                     secret: "Premium data unlocked!",
-                    timestamp: new Date().toISOString()
+                    timestamp: new Date().toISOString(),
                 });
             });
 
-            app.listen(3000, () => {
-                console.log("Express server running on http://localhost:3000");
+            const port = Number(process.env.PORT) || 3000;
+            serve({ fetch: app.fetch, port }, () => {
+                console.log(`Server running on http://localhost:${port}`);
             });
         }
 
         main().catch(console.error);
         ```
 
-        ### Cache Configuration
+        ### Step 3: Run the Server
 
-        The `cacheConfig` option helps reduce calls to the facilitator:
+        ```bash
+        npx tsx server.ts
+        ```
 
-        ```javascript
-        cacheConfig: {
-            capacity: 256,    // Max number of cached entries
-            maxAge: 30000,    // Cache TTL in milliseconds (30 seconds)
-        }
+        ### Multiple Protected Routes
+
+        Add multiple routes with different pricing:
+
+        ```typescript
+        app.use(
+            paymentMiddleware(
+                {
+                    "GET /premium/data": {
+                        accepts: [
+                            {
+                                scheme: "exact",
+                                network: network,
+                                payTo: receivingAddress,
+                                price: {
+                                    amount: "10000",
+                                    asset: paymentTokenAddress,
+                                    extra: { name: paymentTokenName, version: "1" },
+                                },
+                            },
+                        ],
+                        description: "Basic premium data",
+                        mimeType: "application/json",
+                    },
+                    "GET /premium/advanced": {
+                        accepts: [
+                            {
+                                scheme: "exact",
+                                network: network,
+                                payTo: receivingAddress,
+                                price: {
+                                    amount: "50000",
+                                    asset: paymentTokenAddress,
+                                    extra: { name: paymentTokenName, version: "1" },
+                                },
+                            },
+                        ],
+                        description: "Advanced premium data",
+                        mimeType: "application/json",
+                    },
+                },
+                resourceServer,
+            ),
+        );
         ```
 
     </Tab>
-    <Tab title="Hono">
+    <Tab title="Faremeter SDK">
 
         ### Step 1: Install Dependencies
 
         ```bash
-        npm install hono @faremeter/middleware
+        npm install hono @hono/node-server @faremeter/middleware dotenv
         ```
 
-        ### Step 2: Create the Middleware
+        ### Step 2: Create the Server
 
-        ```javascript
-        import { createMiddleware } from "@faremeter/middleware/hono";
-
-        const paywalled = await createMiddleware({
-            facilitatorURL: "https://facilitator.dirtroad.dev",
-            accepts: [
-                {
-                    scheme: "exact",
-                    network: "skale-base-sepolia",
-                    maxAmountRequired: "1.5",
-                    description: "SKALE USDC payment",
-                },
-            ],
-        });
-        ```
-
-        ### Step 3: Create Protected Routes
-
-        ```javascript
-        import { Hono } from "hono";
-
-        const app = new Hono();
-
-        // Public route - no payment required
-        app.get("/", (c) => {
-            return c.json({ message: "Welcome to the API" });
-        });
-
-        // Apply middleware to all /premium/* routes
-        app.use("/premium/*", paywalled);
-
-        // Protected route - requires x402 payment
-        app.get("/premium/data", (c) => {
-            return c.json({ 
-                secret: "This is premium content",
-                timestamp: new Date().toISOString()
-            });
-        });
-
-        // Protected route - premium weather data
-        app.get("/premium/weather", (c) => {
-            return c.json({
-                temperature: 72,
-                humidity: 45,
-                forecast: "Sunny with clear skies"
-            });
-        });
-
-        export default app;
-        ```
-
-        ### Step 4: Complete Working Example
-
-        ```javascript
+        ```typescript
         import { Hono } from "hono";
         import { serve } from "@hono/node-server";
         import { createMiddleware } from "@faremeter/middleware/hono";
+        import "dotenv/config";
+
+        const app = new Hono();
 
         async function main() {
-            const app = new Hono();
+            const facilitatorUrl = process.env.FACILITATOR_URL!;
+            const receivingAddress = process.env.RECEIVING_ADDRESS as `0x${string}`;
+            const paymentTokenAddress = process.env.PAYMENT_TOKEN_ADDRESS as `0x${string}`;
+            const paymentTokenName = process.env.PAYMENT_TOKEN_NAME || "Bridged USDC (SKALE Bridge)";
+            const networkChainId = process.env.NETWORK_CHAIN_ID || "324705682";
 
-            // Create paywalled middleware
+            // Create payment middleware
             const paywalled = await createMiddleware({
-                facilitatorURL: "https://facilitator.dirtroad.dev",
+                facilitatorURL: facilitatorUrl,
                 accepts: [
                     {
                         scheme: "exact",
-                        network: "skale-base-sepolia",
-                        maxAmountRequired: "1.5",
-                        description: "SKALE USDC payment",
+                        network: `eip155:${networkChainId}`,
+                        amount: "10000",
+                        maxTimeoutSeconds: 300,
+                        payTo: receivingAddress,
+                        asset: paymentTokenAddress,
+                        description: "Premium data access",
+                        mimeType: "application/json",
+                        extra: {
+                            name: paymentTokenName,
+                            version: "1",
+                        },
                     },
                 ],
             });
 
             // Public endpoint
             app.get("/", (c) => {
-                return c.json({ 
-                    message: "Welcome! Access /premium/* endpoints for paid content" 
-                });
+                return c.json({ message: "Welcome! Access /premium/* endpoints for paid content" });
             });
 
-            // Apply middleware to premium routes
-            app.use("/premium/*", paywalled);
-
-            // Protected endpoints
-            app.get("/premium/data", (c) => {
-                return c.json({ 
+            // Protected endpoint
+            app.get("/premium/data", paywalled, (c) => {
+                return c.json({
                     secret: "Premium data unlocked!",
-                    timestamp: new Date().toISOString()
+                    timestamp: new Date().toISOString(),
                 });
             });
 
-            serve({
-                fetch: app.fetch,
-                port: 3000,
+            const port = Number(process.env.PORT) || 3000;
+            serve({ fetch: app.fetch, port }, () => {
+                console.log(`Server running on http://localhost:${port}`);
             });
-
-            console.log("Hono server running on http://localhost:3000");
         }
 
         main().catch(console.error);
         ```
 
-        ### Hono with Cloudflare Workers
+        ### Step 3: Run the Server
 
-        Deploy to Cloudflare Workers:
+        ```bash
+        npx tsx server.ts
+        ```
 
-        ```javascript
-        import { Hono } from "hono";
-        import { createMiddleware } from "@faremeter/middleware/hono";
+        ### Applying Middleware to Multiple Routes
 
-        const app = new Hono();
+        Use route patterns to protect multiple endpoints:
 
-        const paywalled = await createMiddleware({
-            facilitatorURL: "https://facilitator.dirtroad.dev",
-            accepts: [
-                {
-                    scheme: "exact",
-                    network: "skale-base-sepolia",
-                    maxAmountRequired: "1.5",
-                    description: "SKALE USDC payment",
-                },
-            ],
+        ```typescript
+        // Apply to all /premium/* routes
+        app.use("/premium/*", paywalled);
+
+        app.get("/premium/data", (c) => {
+            return c.json({ type: "data", content: "Premium data" });
         });
 
-        app.get("/", (c) => c.json({ message: "Welcome!" }));
-        app.use("/premium/*", paywalled);
-        app.get("/premium/data", (c) => c.json({ secret: "Premium content" }));
+        app.get("/premium/weather", (c) => {
+            return c.json({ type: "weather", forecast: "Sunny" });
+        });
+        ```
 
-        export default app;
+        Or create different middleware instances with different pricing:
+
+        ```typescript
+        const basicPaywall = await createMiddleware({
+            facilitatorURL: facilitatorUrl,
+            accepts: [{
+                scheme: "exact",
+                network: `eip155:${networkChainId}`,
+                amount: "10000",
+                maxTimeoutSeconds: 300,
+                payTo: receivingAddress,
+                asset: paymentTokenAddress,
+                extra: { name: paymentTokenName, version: "1" },
+            }],
+        });
+
+        const premiumPaywall = await createMiddleware({
+            facilitatorURL: facilitatorUrl,
+            accepts: [{
+                scheme: "exact",
+                network: `eip155:${networkChainId}`,
+                amount: "50000",
+                maxTimeoutSeconds: 300,
+                payTo: receivingAddress,
+                asset: paymentTokenAddress,
+                extra: { name: paymentTokenName, version: "1" },
+            }],
+        });
+
+        app.get("/basic/data", basicPaywall, (c) => c.json({ tier: "basic" }));
+        app.get("/premium/data", premiumPaywall, (c) => c.json({ tier: "premium" }));
         ```
 
     </Tab>
@@ -297,53 +319,25 @@ When a client reaches a paywalled endpoint, the middleware:
 
 ---
 
-## Multiple Payment Options
+## Testing Your Server
 
-Provide an array of arrays in `accepts` to offer alternative payment methods:
+Once your server is running, you can test it:
 
-```javascript
-const paywalled = await createMiddleware({
-    facilitatorURL: "https://facilitator.dirtroad.dev",
-    accepts: [
-        [
-            {
-                scheme: "exact",
-                network: "skale-base-sepolia",
-                maxAmountRequired: "1.5",
-                description: "SKALE USDC payment",
-            },
-            {
-                scheme: "exact",
-                network: "ethereum-mainnet",
-                maxAmountRequired: "1.5",
-                description: "Ethereum USDC payment",
-            },
-        ],
-    ],
-});
+```bash
+# Public endpoint (no payment required)
+curl http://localhost:3000/
+
+# Protected endpoint (returns 402 Payment Required)
+curl http://localhost:3000/premium/data
 ```
 
-## Resource-Specific Requirements
-
-Leave `resource` undefined to let the middleware fill it with the current request URL:
-
-```javascript
-const paywalled = await createMiddleware({
-    facilitatorURL: "https://facilitator.dirtroad.dev",
-    accepts: [
-        {
-            scheme: "exact",
-            network: "skale-base-sepolia",
-            maxAmountRequired: "1.5",
-            // resource is auto-filled with the request URL
-        },
-    ],
-});
-```
+The protected endpoint will return a `402 Payment Required` response with payment requirements that a client can use to make a payment.
 
 ## Error Handling
 
-Invalid facilitator responses throw an exception (HTTP 500). When settlement fails, the middleware replays the facilitator payload to the client with a 402 status.
+- Invalid facilitator responses throw an exception (HTTP 500)
+- When settlement fails, the middleware returns a 402 status with error details
+- Missing configuration returns a 503 Service Unavailable
 
 ## Next Steps
 
@@ -354,5 +348,5 @@ Invalid facilitator responses throw an exception (HTTP 500). When settlement fai
 ## Resources
 
 - [x402 Examples Repository](https://github.com/TheGreatAxios/x402-examples)
-- [Corbits/Faremeter Middleware](https://docs.corbits.dev/api/reference/middleware/overview)
+- [Faremeter Middleware Documentation](https://docs.corbits.dev/api/reference/middleware/overview)
 - [Coinbase x402 SDK](https://github.com/coinbase/x402)
